--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="container">
 		<div class="navbar">
 		<div class="logo">
-			<img src="images/capture.png" width="100px">
+			<img src="images/Capture.png" width="100px">
 		</div>
 			<nav>
 				<ul>
