--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	
 <head>
 	<meta charset="UTF-8">
-	<title> HCI BASED WEBSITE</title>
+	<title> Abubu Shop</title>
 	<link rel="stylesheet" href="style.css">
 	
 </head>
