--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="container">
 		<div class="navbar">
 		<div class="logo">
-			<img src="images/Capture.PNG" width="100px">
+			<img src="images/Capture.PNG" width="50px" height="50px>
 		</div>
 			<nav>
 				<ul>
@@ -29,7 +29,7 @@
 					<li> <a href="">Account</a></li>
 				</ul>
 			</nav>
-			<img src="images/download.png" width="40px" height="40px">
+			<img src="images/download.png" width="30px" height="30px">
 </div>
 	</div>
 </div>
