--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	
-	
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"
+
+
 <head>
 	<meta charset="UTF-8">
-	<title> Abubu Shop</title>
+	<title> ABUBU SHOP</title>
 	<link rel="stylesheet" href="style.css">
 	
 </head>
@@ -19,7 +20,7 @@
 <div class="container">
 		<div class="navbar">
 		<div class="logo">
-			
+			<img src="images/Capture.PNG">
 		</div>
 			<nav>
 				<ul>
@@ -29,7 +30,7 @@
 					<li> <a href="">Account</a></li>
 				</ul>
 			</nav>
-			<img src="images/download.png" width="30px" height="30px">
+			<img src="images/download.png" width="40px" height="40px">
 </div>
 	</div>
 </div>
